--- a/index.html
+++ b/index.html
@@ -769,6 +769,7 @@
 
         // Only update vote counts without rebuilding bracket structure
         async function updateVoteCountsOnly(contract) {
+            // Check all possible matches in all rounds
             const rounds = [
                 { matches: 4, roundIndex: 0 },
                 { matches: 2, roundIndex: 1 },
@@ -782,6 +783,7 @@
                         updateMatchVotesOnly(round.roundIndex, matchIndex, matchData);
                     } catch (error) {
                         // Match doesn't exist yet, skip
+                        continue;
                     }
                 }
             }
@@ -819,23 +821,16 @@
             
             // Clear any existing content completely
             bracketContainer.innerHTML = '';
-            
-            // Get current tournament state to determine which rounds to show
-            const tournamentState = await contract.getTournamentState();
-            const currentRound = tournamentState.round.toNumber();
 
-            // Only show rounds that are active or completed
+            // Define all tournament rounds - always show all 3 rounds
             const rounds = [
                 { name: 'Quarter Finals', matches: 4, roundIndex: 0, cssClass: 'quarter-finals' },
                 { name: 'Semi Finals', matches: 2, roundIndex: 1, cssClass: 'semi-finals' },
                 { name: 'Final', matches: 1, roundIndex: 2, cssClass: 'finals' }
             ];
 
-            // Create each round section only once
+            // Create each round section - show all rounds always
             for (let roundInfo of rounds) {
-                // Skip rounds that haven't started yet (except current round)
-                if (roundInfo.roundIndex > currentRound + 1) continue;
-
                 const roundSection = document.createElement('div');
                 roundSection.className = `round-section ${roundInfo.cssClass}`;
                 roundSection.id = `round-section-${roundInfo.roundIndex}`;
@@ -849,28 +844,20 @@
                 matchesGrid.className = 'matches-grid';
 
                 // Load matches for this round
-                let hasMatches = false;
                 for (let matchIndex = 0; matchIndex < roundInfo.matches; matchIndex++) {
                     try {
                         const matchData = await contract.getMatch(roundInfo.roundIndex, matchIndex);
                         const matchCard = createMatchCard(roundInfo.roundIndex, matchIndex, matchData);
                         matchesGrid.appendChild(matchCard);
-                        hasMatches = true;
                     } catch (error) {
-                        // Only show placeholder for current round
-                        if (roundInfo.roundIndex === currentRound) {
-                            const matchCard = createPlaceholderCard(roundInfo.roundIndex, matchIndex);
-                            matchesGrid.appendChild(matchCard);
-                            hasMatches = true;
-                        }
+                        // Show TBD placeholder for matches that don't exist yet
+                        const matchCard = createPlaceholderCard(roundInfo.roundIndex, matchIndex);
+                        matchesGrid.appendChild(matchCard);
                     }
                 }
 
-                // Only add the round section if it has matches
-                if (hasMatches) {
-                    roundSection.appendChild(matchesGrid);
-                    bracketContainer.appendChild(roundSection);
-                }
+                roundSection.appendChild(matchesGrid);
+                bracketContainer.appendChild(roundSection);
             }
         }
 
