--- a/index.html
+++ b/index.html
@@ -553,10 +553,10 @@
             1: 'KURU EXCHANGE', 
             2: 'KIZZY MOBILE',
             3: 'CRYSTAL',
-            4: 'CULT',
+            4: 'CULT.TRADE',
             5: 'aPriori',
-            6: 'Magma',
-            7: 'O.LAB'
+            6: 'Magma Staking',
+            7: 'Opinion Labs'
         };
 
         // Global variables
@@ -1088,3 +1088,4 @@
     </script>
 </body>
 </html>
+
