--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="fc:frame:image" content="https://your-domain.com/tournament-preview.png" />
     <meta property="fc:frame:button:1" content="🏆 View Tournament" />
     <meta property="fc:frame:button:1:action" content="link" />
-    <meta property="fc:frame:button:1:target" content="https://your-domain.com" />
+    <meta property="fc:frame:button:1:target" content="https://monad-vote-competition.vercel.app/" />
     <meta property="fc:frame:button:2" content="🗳️ Vote Now" />
     <meta property="fc:frame:button:2:action" content="link" />
-    <meta property="fc:frame:button:2:target" content="https://your-domain.com" />
+    <meta property="fc:frame:button:2:target" content="https://monad-vote-competition.vercel.app/" />
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Tournament Voting Championship - Monad Testnet" />
@@ -809,3 +809,4 @@
                 console.error('Error connecting wallet:', error);
                 alert('Failed to connect wallet. Please try again.');
             }
+
